{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 89,
  "lineage": "d108d24a-5edb-681f-6ffa-28165ee67f07",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AKN_I1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0996d3051b72b5b2c",
            "arn": "arn:aws:ec2:us-east-2:412369709046:instance/i-0e35bac72505861d5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e35bac72505861d5",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "AKN_KEY",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06ac02cc7b42faf67",
            "private_dns": "ip-10-0-1-44.us-east-2.compute.internal",
            "private_ip": "10.0.1.44",
            "public_dns": "ec2-3-138-126-231.us-east-2.compute.amazonaws.com",
            "public_ip": "3.138.126.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ad3999febaefecfc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0b222b18a07ccb05d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02af2ae2eafaa2e5d",
            "tags": {
              "name": "AKN_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b222b18a07ccb05d"
            ]
          },
          "dependencies": [
            "aws_security_group.AKN_SG",
            "aws_subnet.ACKLEN_SUBN_1",
            "aws_vpc.VPC_ACKLEN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AKN_I2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0996d3051b72b5b2c",
            "arn": "arn:aws:ec2:us-east-2:412369709046:instance/i-0381eb0ea9c5db3af",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0381eb0ea9c5db3af",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "AKN_KEY",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-091ae38ece55f7bdf",
            "private_dns": "ip-10-0-1-77.us-east-2.compute.internal",
            "private_ip": "10.0.1.77",
            "public_dns": "ec2-3-135-195-165.us-east-2.compute.amazonaws.com",
            "public_ip": "3.135.195.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02375e79cbf505c05",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0b222b18a07ccb05d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02af2ae2eafaa2e5d",
            "tags": {
              "name": "AKN_2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b222b18a07ccb05d"
            ]
          },
          "dependencies": [
            "aws_security_group.AKN_SG",
            "aws_subnet.ACKLEN_SUBN_1",
            "aws_vpc.VPC_ACKLEN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "AKN_GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:412369709046:internet-gateway/igw-0de4dae294e05ed6d",
            "id": "igw-0de4dae294e05ed6d",
            "owner_id": "412369709046",
            "tags": {
              "Name": "AKN_GW"
            },
            "vpc_id": "vpc-09d00f543d5840d6e"
          },
          "dependencies": [
            "aws_vpc.VPC_ACKLEN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "AKNP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:412369709046:loadbalancer/app/AKNP/8bea2f6c9b14bc73",
            "arn_suffix": "app/AKNP/8bea2f6c9b14bc73",
            "dns_name": "AKNP-1014054250.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:412369709046:loadbalancer/app/AKNP/8bea2f6c9b14bc73",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "AKNP",
            "security_groups": [
              "sg-0b222b18a07ccb05d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02af2ae2eafaa2e5d"
              },
              {
                "subnet_id": "subnet-069d9219c0f5aa10d"
              }
            ],
            "subnets": [
              "subnet-02af2ae2eafaa2e5d",
              "subnet-069d9219c0f5aa10d"
            ],
            "tags": {
              "environment": "AKN_LB"
            },
            "vpc_id": "vpc-09d00f543d5840d6e",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.AKN_SG",
            "aws_subnet.ACKLEN_SUBN_1",
            "aws_subnet.ACKLEN_SUBN_2",
            "aws_vpc.VPC_ACKLEN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "AKNP_Listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:412369709046:listener/app/AKNP/8bea2f6c9b14bc73/17abb518270ebb9a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:412369709046:targetgroup/AKNTG/51e21ab8a43aab66",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:412369709046:listener/app/AKNP/8bea2f6c9b14bc73/17abb518270ebb9a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:412369709046:loadbalancer/app/AKNP/8bea2f6c9b14bc73",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.AKNP",
            "aws_lb_target_group.AKN_TG",
            "aws_security_group.AKN_SG",
            "aws_subnet.ACKLEN_SUBN_1",
            "aws_subnet.ACKLEN_SUBN_2",
            "aws_vpc.VPC_ACKLEN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "AKN_TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:412369709046:targetgroup/AKNTG/51e21ab8a43aab66",
            "arn_suffix": "targetgroup/AKNTG/51e21ab8a43aab66",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:412369709046:targetgroup/AKNTG/51e21ab8a43aab66",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "AKNTG",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09d00f543d5840d6e"
          },
          "dependencies": [
            "aws_vpc.VPC_ACKLEN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "AKN_RTG1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:412369709046:targetgroup/AKNTG/51e21ab8a43aab66-20210226225850078500000001",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:412369709046:targetgroup/AKNTG/51e21ab8a43aab66",
            "target_id": "i-0e35bac72505861d5"
          },
          "dependencies": [
            "aws_instance.AKN_I1",
            "aws_lb_target_group.AKN_TG",
            "aws_security_group.AKN_SG",
            "aws_subnet.ACKLEN_SUBN_1",
            "aws_vpc.VPC_ACKLEN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "AKN_RTG2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:412369709046:targetgroup/AKNTG/51e21ab8a43aab66-20210226225850111300000002",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:412369709046:targetgroup/AKNTG/51e21ab8a43aab66",
            "target_id": "i-0381eb0ea9c5db3af"
          },
          "dependencies": [
            "aws_instance.AKN_I2",
            "aws_lb_target_group.AKN_TG",
            "aws_security_group.AKN_SG",
            "aws_subnet.ACKLEN_SUBN_1",
            "aws_vpc.VPC_ACKLEN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "Principal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9db1f30188d0dd2",
            "original_route_table_id": "rtb-0ff0c009bc26a4e62",
            "route_table_id": "rtb-0b396e63720db9a2b",
            "vpc_id": "vpc-09d00f543d5840d6e"
          },
          "dependencies": [
            "aws_internet_gateway.AKN_GW",
            "aws_route_table.AKN_ROUTE",
            "aws_vpc.VPC_ACKLEN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "AKN_ROUTE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b396e63720db9a2b",
            "owner_id": "412369709046",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0de4dae294e05ed6d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "AKN_ROUTE"
            },
            "vpc_id": "vpc-09d00f543d5840d6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.AKN_GW",
            "aws_vpc.VPC_ACKLEN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "AKN_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:412369709046:security-group/sg-0b222b18a07ccb05d",
            "description": "Acklen Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b222b18a07ccb05d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TCP App",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TCP App",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "181.115.62.122/32"
                ],
                "description": "All Trafic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "AKN_SG",
            "name_prefix": null,
            "owner_id": "412369709046",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AKN_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d00f543d5840d6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC_ACKLEN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ACKLEN_SUBN_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:412369709046:subnet/subnet-02af2ae2eafaa2e5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02af2ae2eafaa2e5d",
            "map_public_ip_on_launch": true,
            "owner_id": "412369709046",
            "tags": {
              "Name": "ACKLEN_SUBN_1"
            },
            "vpc_id": "vpc-09d00f543d5840d6e"
          },
          "dependencies": [
            "aws_vpc.VPC_ACKLEN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ACKLEN_SUBN_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:412369709046:subnet/subnet-069d9219c0f5aa10d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-069d9219c0f5aa10d",
            "map_public_ip_on_launch": true,
            "owner_id": "412369709046",
            "tags": {
              "Name": "ACKLEN_SUBN_2"
            },
            "vpc_id": "vpc-09d00f543d5840d6e"
          },
          "dependencies": [
            "aws_vpc.VPC_ACKLEN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC_ACKLEN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:412369709046:vpc/vpc-09d00f543d5840d6e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f70c026f95b88c96",
            "default_route_table_id": "rtb-0ff0c009bc26a4e62",
            "default_security_group_id": "sg-0b0522eaddc1ca0e5",
            "dhcp_options_id": "dopt-0e269f8d99051c92a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09d00f543d5840d6e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ff0c009bc26a4e62",
            "owner_id": "412369709046",
            "tags": {
              "Name": "VPC_ACKLEN"
            }
          }
        }
      ]
    }
  ]
}